# mcp-bigquery-gateway

./: .dockerignore  Dockerfile  Makefile  README.md  env.example  pyproject.toml  requirements.txt
.cursor/: mcp.json
examples/: cursor_config_example.json
mcp-bigquery-gateway/: .dockerignore  .gitignore  LICENSE  Makefile  README.Docker.md  README.md  docker-run.sh  env.example  pyproject.toml  test_mcp_server.py
mcp-bigquery-gateway/src/: __init__.py  bigquery_client.py  mcp_bigquery_server.py  utils.py
mcp-bigquery-gateway/tests/: test_mcp_server.py  test_utils.py
src/: bigquery_client.py  mcp_bigquery_server.py  utils.py
tests/: test_utils.py
